--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "method-override": "^2.3.10",
     "npm": "^5.8.0",
     "pg": "^7.4.1"
+  },
+
+  "scripts": {
+    "start": "node index.js"
   }
 }
