--- a/package.json
+++ b/package.json
@@ -5,6 +5,12 @@
   "main": "index.js",
   "author": "jerrypan",
   "license": "MIT",
+  "engines": {
+    "node": "^6.6.0"
+  },
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
@@ -15,9 +21,5 @@
     "method-override": "^2.3.10",
     "npm": "^5.8.0",
     "pg": "^7.4.1"
-  },
-
-  "scripts": {
-    "start": "node index.js"
   }
 }
